--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -118,13 +118,13 @@ main
 
 .main__games-carousel-item
 {
-    width: 90%;
+    width: 400px;
     height: 300px;
 }
 
 .carousel-item img
 {
-    width: 800px;
+    width: 100%;
     height: 300px;
 
     border: 1px solid var(--roxo);
@@ -160,24 +160,36 @@ main
 }
 
 /* Container dos cards */
-.jogos1
+.main__games-jogos
 {
-    width: 40%;
+    width: 1000px;
     height: 100%;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 100px;
 }
 
-.jogos2
+.main__games-jogos-01
 {
     width: 40%;
     height: 100%;
 
     display: flex;
     flex-direction: column-reverse;
+    align-items: center;
+    gap: 20px;
+}
+
+.main__games-jogos-02
+{
+    width: 40%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
     align-items: center;
     gap: 20px;
 }
