--- a/templates/Pagina_carrinho.html
+++ b/templates/Pagina_carrinho.html
@@ -18,13 +18,12 @@
     <!-- Link JS Bootstrap via CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
 
-
     <!-- links interno -->
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-pagina_carrinho.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-cores_das_paginas.css')}}">
-    <link rel="stylesheet" href="{{url_for('static', filename='styles/style-fonts_das_paginas.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-cores_das_paginas.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style-fonts_das_paginas.css') }}">
     
 </head>
 
@@ -59,9 +58,9 @@
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="bi bi-person-circle"></i></button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">My Accont</a></li>
-                    <li><a class="dropdown-item" href="#">Login/Register</a></li>
-                    <li><a class="dropdown-item" href="#">Logout</a></li>
+                    <li><a class="dropdown-item" href="/perfil-usuario">My Account</a></li>
+                    <li><a class="dropdown-item" href="/login">Login/Register</a></li>
+                    <li><a class="dropdown-item" href="/get/logout">Logout</a></li>
                 </ul>
             </div>
 
@@ -72,37 +71,29 @@
     <main class="main">
 
         <section class="main__produtos">
-
             <nav class="main__produtos-container">
-
                 <ul class="main__produtos-nome">
-                    {% for pr2 in pega_produto %}
-
+                    {% for item in carrinho %}
                     <li>
-                        <a class="main__produtos-nome-button-compraIn">Compra Individual</a>
-                        <p>{{pr2.nome_jogo}}</p>
-                        <a href="/excluir/{{pr2.cod_jogo}}" class="main__produtos-nome-button-exclui">Excluir</a>
+                        <input type="checkbox">
+                        <p>{{ item.nome_jogo }}</p>
+                        <button><a href="/excluir/{{ item.cod_jogo }}">Excluir</a></button>
                     </li>
-
                     {% endfor %}
                 </ul>
 
-                <!-- Img do produto -->
                 <ul class="main__produtos-imagem">
-                    {% for pr2 in pega_produto %}
-
+                    {% for item in carrinho %}
                     <li>
-                        <p>Codigo Produto: {{loop.index}}</p>
-                        <p>{{pr2.nome_jogo}}</p>
-                        <img src="{{pr2.url}}">
+                        <p>Código Produto: {{ item.cod_jogo }}</p>
+                        <p>{{ item.nome_jogo }}</p>
+                        <img src="{{ item.url }}" alt="{{ item.nome_jogo }}">
                     </li>
-
                     {% endfor %}
                 </ul>
-
             </nav>
-
         </section>
+
 
         <section class="main__termos">
 
@@ -110,7 +101,7 @@
 
             <div class="main__termos-container">
 
-                <strong><span>Valor Total: </span> R$ valor</strong>
+                <strong><span>Valor Total: </span> R$ {{ total }}</strong>
 
                 <div class="main__termos-container-button">
                     
@@ -122,7 +113,7 @@
 
                     <form action="" class="main__termos-container-button-cancelar">
 
-                        <button>Limpar Carrinho</button>
+                        <button>Cancelar</button>
 
                     </form>
                   
