--- a/static/styles/style-pagina_inicial.css
+++ b/static/styles/style-pagina_inicial.css
@@ -150,6 +150,7 @@ main
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     text-align: center;
 
     gap: 16px;
