--- a/static/styles/style-pagina_carrinho.css
+++ b/static/styles/style-pagina_carrinho.css
@@ -143,7 +143,7 @@ a
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
     border: 1px solid var(--branco);
@@ -153,10 +153,13 @@ a
 .main__produtos-nome-button-compraIn,
 .main__produtos-nome-button-exclui
 {
-    width: 80px;
+    width: 140px;
     height: 40px;
 
     text-align: center;
+
+    margin-left: 10px;
+    margin-right: 10px;
     padding-top: 5px;
 
     border: 1px solid var(--cinza_claro);
@@ -165,7 +168,6 @@ a
 
 .main__produtos-nome-button-compraIn
 {
-    width: 140px;
     color: var(--branco);
     background-color: transparent;
     border: 1px solid var(--verde_claro);
