--- a/static/styles/style-pagina_categoria_jogos.css
+++ b/static/styles/style-pagina_categoria_jogos.css
@@ -79,15 +79,34 @@ main
 {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row
+{
+    width: 200px;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .col-auto a
 {
     font-size: 16px;
+
     padding: 10px;
+
     background-color: transparent;
     border: 1px solid var(--azul_claro);
     border-radius: 10px;
+
     transition: 0.5s
 }
 
@@ -113,7 +132,6 @@ main
 
     gap: 16px;
     padding: 16px;
-
     
     border: 1px solid var(--preto);
     border-radius: 10px;
@@ -186,6 +204,33 @@ main
     color: var(--preto);
     background-color: var(--verde_claro);
     border: 1px solid var(--branco);
+}
+
+.card-img-top
+{
+    height: 200px;
+    object-fit: cover;
+}
+
+.nome-jogo
+{
+    font-weight: 600;
+    font-size: 1.1rem;
+}
+
+.descricao-jogo
+{
+    flex-grow: 1;
+}
+
+.preco-jogo
+{
+    font-size: 1rem;
+}
+
+.botao-comprar
+{
+    width: 100%;
 }
 
 
