--- a/static/styles/style-pagina_comprar_produtos.css
+++ b/static/styles/style-pagina_comprar_produtos.css
@@ -77,7 +77,8 @@ a
 .main
 {
     width: 100%;
-    height: 140vh;
+    height: 100%;
+    min-height: 200vh;
 
     display: flex;
     flex-direction: column;
@@ -89,8 +90,6 @@ a
     width: 100%;
     height: 50%;
 
-    margin: 20px;
-
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -101,10 +100,10 @@ a
 
 .main__produto img
 {
-    width: 40%;
+    width: 600px;
     height: 80%;
 
-    margin-right: 20px;
+    margin: 20px;
 
     background-color: var(--cinza_escuro);
     border: 1px solid var(--cinza_claro);
@@ -113,7 +112,7 @@ a
 
 .main__produto-detalhes
 {
-    width: 500px;
+    width: 700px;
     height: 100%;
 
     margin: 20px;
@@ -127,7 +126,7 @@ a
 
 .main__produto-detalhes-nome
 {
-    width: 100%;
+    width: 600px;
     height: 30%;
 
     padding: 20px;
@@ -141,7 +140,7 @@ a
 
 .main__produto-detalhes-descricao
 {
-    width: 100%;
+    width: 600px;
     height: 60%;
 
     padding: 20px;
@@ -217,7 +216,6 @@ a
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 
     background-color: var(--cinza_escuro);
@@ -228,7 +226,7 @@ a
 .main__comentario-container-input
 {
     width: 100%;
-    height: 70%;
+    height: 100%;
 
     text-align: center;
 
@@ -242,6 +240,7 @@ a
 .main__comentario-container-input textarea
 {
     width: 50%;
+    height: 80px;
 
     min-height: 40px;
 
@@ -308,7 +307,7 @@ a
 
     margin-top: 20px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
     border-bottom: 0px;
 }
 
@@ -319,7 +318,7 @@ a
     height: 150px;
     min-height: 100px;
 
-    border: 1px solid var(--cinza_claro);
+    border: 1px solid var(--roxo);
 }
 
 
