--- a/static/styles/media.css
+++ b/static/styles/media.css
@@ -3,29 +3,37 @@
 {
     /* Pagina Inicial */
 
+
         /* Container dos Cards */
             .main__games-jogos
                 {
                     width: 400px;
 
+
                     flex-direction: column;
                 }
 
+
     /* Pagina Comprar Produto */
 
+
         /* Main */
+
 
             .main__produto
             {
                 flex-direction: column;
             }
 
+
             .main__produto-detalhes
             {
                 width: 600px;
 
+
                 margin: 0;
             }
+
 
             .main__produto-detalhes-nome,
             .main__produto-detalhes-descricao
@@ -33,13 +41,16 @@
                 width: 550px;
             }
 
+
             .main__produto-compra
             {
                 width: 100%;
                 height: 200px;
 
+
                 border-bottom: 1px solid var(--branco);
             }
+
 
             .main__comentario
             {
@@ -48,6 +59,7 @@
                 flex-direction: column;
             }
 
+
             .main__comentario-container,
             .main__chat-container
             {
@@ -55,18 +67,80 @@
                 height: 400px;
             }
 
+
             .main__comentario-container
             {
                 height: 300px;
             }
 
 
+    /* Pagina de apresentação */
+
+
+        /* Main */
+            .main__apresentacao
+            {
+                width: 1000px;
+                height: 1150px;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+
+
+            .main__apresentacao-devs
+            {
+                width: 100%;
+                height: 600px;
+            }
+
+            .main__apresentacao-devs-container
+            {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+            }
+
+
+            .main__apresentacao-discurso
+            {
+                width: 90%;
+                height: 500px;
+
+                margin: 0;
+
+                border-radius: 10px;
+            }
+
+
+    /* Pagina do carrinho */
+
+        /* Main */
+            .main__produtos-container
+            {
+                flex-direction: column;
+            }
+
+            .main__produto-imagem
+            {
+                height: 200px;
+            }
+
+            .main__termos
+            {
+                width: 100%;
+            }
+
+
+
+
 }
 
+
 /* Tablet */
-@media (max-width: 1000px) 
+@media (max-width: 1000px)
 {
     /* Pagina Inicial */
+
 
         /* Carrossel */
             .main__games-carousel
@@ -75,44 +149,54 @@
                 height: 450px;
             }
 
+
             .main__games-carousel-container
             {
                 width: 90%;
                 height: 640px;
 
+
                 flex-direction: column;
             }
+
 
             .main__games-carousel-item
             {
                 width: 400px;
             }
 
+
             .cell
             {
                 display: none;
             }
+
 
         /* Container dos cards */
             .main__games-jogos
             {
                 width: 400px;
 
+
                 flex-direction: column;
             }
+
 
             .main__games-jogos-01
             {
                 width: 90%;
             }
 
+
             .main__games-jogos-02
             {
                 width: 90%;
-        
+       
             }
 
+
     /* Busca */
+
 
         /* Main */
             .main__card
@@ -120,13 +204,101 @@
                 display: flex;
                 flex-direction: column;
             }
-    
+
+
+    /* Pagina de apresentação */
+
+
+        /* Main */
+            .main__apresentacao
+            {
+                width: 600px;
+            }
+
+            .main__apresentacao-devs-container img
+            {
+                margin: 0;
+            }
+
+            .main__apresentacao-devs-container div
+            {
+                width: 400px;
+            }
+
+    /* Pagina do carrinho */
+
+        /* Main */
+            .main__produtos
+            {
+                height: 800px;
+            }
+
+            .main__produtos-container
+            {
+                flex-direction: column;
+            }
+
+            .main__produtos-nome,
+            .main__produtos-imagem
+            {
+                width: 400px;
+            }
+
+            .main__produtos-nome li
+            {
+                width: 300px;
+                min-height: 250px;
+
+                display: flex;
+                flex-direction: column;
+            }
+
+            .main__produtos-nome li > a
+            {
+                margin: 10px;
+            }
+
+            .main__produtos-imagem li
+            {
+                width: 300px;
+                min-height: 250px;
+            }
+
+            .main__produtos-imagem li > img
+            {
+                width: 250px;
+                height: 150px;
+            }
+
+            .main__termos
+            {
+                width: 80%;
+                height: 250px;
+            }
+
+            .main__termos-container
+            {
+                width: 400px;
+                height: 400px;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .main__termos-container-button
+            {
+                flex-direction: column;
+
+                gap: 20px;
+            }
+   
 }
+
 
 /* Celular */
 @media (max-width: 630px)
 {
     /* Pagina Inicial */
+
 
         /* Header */
             .navbar-brand
@@ -134,10 +306,12 @@
                 display: none;
             }
 
+
             .d-flex input
             {
                 width: 150px;
             }
+
 
         /* Carrossel */
             .main__games-carousel
@@ -145,21 +319,26 @@
                 width: 350px;
                 height: 450px;
 
+
                 text-align: center;
             }
+
 
             .main__games-carousel-container
             {
                 width: 90%;
                 height: 640px;
 
+
                 flex-direction: column;
             }
+
 
             .main__games-carousel-item
             {
                 width: 300px;
             }
+
 
         /* Jogos Padrão */
             .main__games
@@ -167,7 +346,9 @@
                 flex-direction: column;
             }
 
+
     /* Pagina logar e Pagina de Cadastro  */
+
 
         /* Main */
             .main__cadastro-login
@@ -175,15 +356,19 @@
                 width: 400px;
             }
 
+
             .main__form-login,
             .main__form-cadastro
             {
                 width: 350px;
             }
 
+
     /* Pagina Comprar Produto */
 
+
         /* Main */
+
 
             .main__produto
             {
@@ -192,15 +377,18 @@
                 align-items: center;
             }
 
+
             .main__produto img
             {
                 width: 350px;
             }
 
+
             .main__produto-detalhes
             {
                 width: 370px;
             }
+
 
             .main__produto-detalhes-nome,
             .main__produto-detalhes-descricao
@@ -208,13 +396,16 @@
                 width: 350px;
             }
 
+
             .main__produto-compra
             {
                 width: 100%;
                 height: 200px;
 
+
                 border-bottom: 1px solid var(--branco);
             }
+
 
             .main__comentario
             {
@@ -223,6 +414,7 @@
                 flex-direction: column;
             }
 
+
             .main__comentario-container,
             .main__chat-container
             {
@@ -230,9 +422,83 @@
                 height: 400px;
             }
 
+
             .main__comentario-container
             {
                 height: 300px;
             }
+        
+    /* Pagina de apresentação */
+
+
+        /* Main */
+            .main__apresentacao
+            {
+                width: 380px;
+                height: 1400px;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+            }
+
+            .main__apresentacao-devs-container img
+            {
+                margin: 0;
+            }
+
+            .main__apresentacao-devs-container div
+            {
+                width: 400px;
+
+                gap: 0;
+            }
+
+            .main__apresentacao-discurso
+            {
+                height: 700px;
+            }
+
+            
+    /* Pagina do carrinho */
+
+        /* Main */
+            .main__produtos
+            {
+                width: 400px;
+            }
+
+            .main__produtos-container
+            {
+                flex-direction: column;
+            }
+
+            .main__produtos-nome,
+            .main__produtos-imagem
+            {
+                width: 300px;
+            }
+
+            .main__produtos-nome li,
+            .main__produtos-imagem li
+            {
+                width: 250px;
+            }
+
+            .main__produtos-nome li > a
+            {
+                margin: 10px;
+            }
+
+            .main__produtos-imagem li > img
+            {
+                width: 200px;
+            }
+
+            .main__termos-container
+            {
+                width: 250px;
+            }
 
 }
+
